# harlequin-toolkit

./: .eslintrc.json  .gitignore  cursor_analyze_lua_dependencies_for_con.md  lint-staged.config.js  nx-release.config.js  nx.json  nx.json.backup  package.json  tsconfig.base.json
.cursor/rules/: cli-commands.mdc  documentation.mdc  go-projects.mdc  package-manager.mdc  project-structure.mdc
.github/workflows/: alpha-release.yml  ci.yml  docs-publish-arweave.yaml  nx-release.yml  release-please.yml  release.yml  remote-signing.yml  semantic-release.yml
ao_process_templates/: AO_SPEC.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json
ao_process_templates/create-packages/create-ao-assemblyscript/: README.md  package.json
ao_process_templates/create-packages/create-ao-assemblyscript/template/: README.md  asconfig.json  package.json
ao_process_templates/create-packages/create-ao-go/: README.md  package.json
ao_process_templates/create-packages/create-ao-go/template/: Makefile  README.md  go.mod  main.go  package.json
ao_process_templates/languages/assemblyscript/: .gitignore  package.json  pnpm-lock.yaml  project.json
ao_process_templates/languages/assemblyscript/template/: asconfig.json  package-lock.json  tsconfig.json
ao_process_templates/languages/go/: package.json  project.json
ao_process_templates/languages/go/ao-go-process/: Makefile  go.mod  (+3 more)
ao_process_templates/scripts/: build-cli-templates.js  build-create-packages.js
ao_process_templates/testing/: package.json  project.json
ao_process_templates/testing/assemblyscript/: Makefile  asconfig.json  package.json  pnpm-lock.yaml
app/: .eslintrc  README.md  package.json  project.json  tailwind.config.js
app/src/: app.tsx
app/src/components/: theme-toggle.tsx
app/src/hooks/: use-theme.ts
app/src/styles/: globals.less
assets/: colors.md
cli/: .goreleaser.yaml  .releaserc.json  CHANGELOG.md  DEBUG_LOGGING.md  DEVELOPMENT.md  LUA_UTILS_TUI_SUMMARY.md  Makefile  README.md  TUI_DEMO.md  go.mod  go.sum  main.go  package.json  project.json  test_wallet.json
cli/cmd/: build.go  init.go  lua_utils.go  remote_signing.go  templates.go  upload.go  version_management.go
cli/cmd/embedded_templates/: assemblyscript.json  go.json  templates.json
cli/config/: config.go  config_test.go
cli/debug/: logger.go
cli/docs/commands/: build.md
cli/examples/: main.bundled.lua  main.lua
cli/lua_utils/: README.md  main.go  main_test.go
cli/pkg/wasm/: parser.go
cli/process_testing/: README.md
cli/r/: .harlequin-template.json  README.md  go.mod  install.sh  package.json
cli/scripts/: README.md  deploy-to-arweave.ts  install_cli.sh  package.json  tsconfig.json
cli/sqlite_utils/: README.md
cli/templates/: README.md  assemblyscript_templates.go  c_templates.go  generator.go  lua_templates.go  rust_templates.go
cli/templates/assemblyscript/: .harlequin.yaml  README.md  asconfig.json  package.json
cli/templates/c/: .harlequin.yaml  CMakeLists.txt  README.md  conanfile.txt  main.c  package.json
cli/templates/c/test/: test_main.c
cli/templates/lua/: .harlequin.yaml  .luacheckrc  CMakeLists.txt  README.md  main.lua  package.json  {{PROJECT_NAME}}-1.0.0-1.rockspec
cli/templates/lua/handlers/: init.lua
cli/templates/lua/src/: trampoline.c
cli/templates/lua/test/: main_test.lua
cli/templates/lua/utils/: init.lua
cli/templates/rust/: .harlequin.yaml  Cargo.toml  README.md  package.json
cli/templates/rust/src/: lib.rs  main.rs
cli/templates/rust/tests/: integration_test.rs
cli/test_lua_bundle/: main.lua  test_tui.sh  utils.lua
cli/tests/: README.md  go.mod  go.sum
cli/tests/e2e/: cli_test.go
cli/tests/integration/: tui_bubbles_test.go  tui_test.go  workflow_integration_test.go
cli/tests/shared/: mocks.go  testutils.go
cli/tests/unit/: bundling_test.go  config_test.go  tui_layout_test.go  upload_workflow_test.go
cli/tui/: main.go
cli/tui/components/: BUBBLES_INTEGRATION.md  README.md  config_editor.go  config_form.go  file_picker.go  help.go  init_wizard.go  keys.go  layout.go  list_selector.go  lua_discovery.go  progress.go  result.go  selector.go  text_input.go  upload_wizard.go  wasm_discovery.go
docs/: .eslintrc.json  .yarnrc  GORELEASER_NX_INTEGRATION.md  HOSTING_SETUP.md  README.md  RELEASE_STRATEGY.md  TWO_STAGE_RELEASE_PIPELINE.md  package.json  project.json  rspress.config.ts
docs/.cursor/rules/: routing.mdc
docs/docs/: _meta.json  index.md
docs/docs/app/: index.md
docs/docs/cli/: index.md  installation.md
docs/docs/guide/: installation.md
docs/docs/sdk/: index.md
docs/styles/: globals.css
madr/: GORELEASER_NX_INTEGRATION.md  RELEASE_STRATEGY.md  TWO_STAGE_RELEASE_PIPELINE.md
remote-signing/: .dockerignore  .gitignore  .goreleaser.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.binary  INTEGRATION_TESTS.md  Makefile  README.md  config.example.json  config.production.json  demo.sh  docker-compose.yml  go.mod  go.sum  integration_test.go  main.go  package.json  project.json  test_server.go
remote-signing/.github/workflows/: docker.yml
remote-signing/cmd/remote-signing/: cli.go
remote-signing/docs/: docs.go  swagger.json  swagger.yaml
remote-signing/example/: README.md  custom_config.go  example.txt  production_example.go  server_only.go  simple_upload.go  static_frontend.go
remote-signing/example/integration/: main.go
remote-signing/example/other-cli/: main.go
remote-signing/example/simple/: main.go
remote-signing/frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
remote-signing/frontend/src/: App.tsx  index.css
remote-signing/old/: cli.go  handlers.go  main.go  server.go  types.go  websocket.go
remote-signing/scripts/: build.sh  deploy-to-arweave.ts  install_remote_signing.sh  package.json  tsconfig.json
remote-signing/server/: api.go  handlers.go  server.go  server_test.go  signing_server.go  types.go  websocket.go
remote-signing/templates/: already_signed.html  error.html  signing_form.html
sdk/: README.md  project.json
server/: README.md  project.json
(+78 files in other folders)
