[package]
name = "{{PROJECT_NAME}}"
version = "1.0.0"
edition = "2021"
authors = ["{{AUTHOR_NAME}}"]
description = "AO Process built with Rust and Harlequin"
license = "MIT"
repository = "https://github.com/{{GITHUB_USER}}/{{PROJECT_NAME}}"
keywords = ["ao", "arweave", "process", "rust", "webassembly", "harlequin"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "{{PROJECT_NAME}}"
path = "src/main.rs"

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
console_log = "1.0"

# Collections and utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }

# Optional: Async support
# tokio = { version = "1.0", features = ["macros", "rt"] }
# wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size and performance
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[package.metadata.wasm-pack.profile.release]
# wasm-pack specific optimizations
wasm-opt = ["-Os", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

